<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.EditNoteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_note_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/input_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_note_activity_toolbar"
        android:autofillHints="@string/title_edit"
        android:hint="@string/none"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:singleLine="true"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/input_note_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textAlignment="textEnd"
            android:layout_marginEnd="10dp"
            android:textColor="@color/gray"
            android:layout_alignBaseline="@id/input_note_title"
            android:layout_alignRight="@id/input_note_title"
            android:gravity="end"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/input_note"
            android:layout_width="match_parent"
            android:layout_height="419dp"
            android:layout_below="@id/input_note_title"
            android:layout_gravity="top"
            android:autofillHints="@string/say_something"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/littleprince"
            android:inputType="textMultiLine"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:paddingEnd="12dp"
            tools:text="@tools:sample/lorem/random" />


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- android:visibility="gone"-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/bold"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bold" />

                <ImageButton
                    android:id="@+id/italic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/italic" />

                <ImageButton
                    android:id="@+id/underline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/underline" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/size1"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/size1" />

                <ImageButton
                    android:id="@+id/size2"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/size2" />

                <ImageButton
                    android:id="@+id/size3"
                    android:layout_width="87dp"
                    android:layout_height="60dp"
                    android:background="@color/transparent"

                    android:scaleType="fitEnd"
                    app:srcCompat="@drawable/size3" />

                <ImageButton
                    android:id="@+id/size4"
                    android:layout_width="119dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/size4" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bt_red"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/red" />

                <ImageButton
                    android:id="@+id/bt_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/blue" />

                <ImageButton
                    android:id="@+id/bt_green"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/green" />

                <ImageButton
                    android:id="@+id/bt_black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/black" />

                <ImageButton
                    android:id="@+id/bt_yellow"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/yellow" />

                <ImageButton
                    android:id="@+id/bt_gray"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/gray" />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/bt_background"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/bg" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="背景" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/bt_font"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/fonts" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="文本编辑" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/bt_photo"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/photo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="图片" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/bt_music"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/music" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="音乐" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/bt_clock"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/clock" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="闹钟" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/bt_address"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/address" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="定位" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <!-- 吴宇佳添加-->
</RelativeLayout>
